@@ -28,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
@@ -436,14 +435,14 @@ public class ConfigDispatcher {
             String value = trimmedLine.substring(property.length() + 1).trim();
             if (value.startsWith(DEFAULT_LIST_STARTING_CHARACTER) && value.endsWith(DEFAULT_LIST_ENDING_CHARACTER)) {
                 logger.debug("Found list in value '{}'", value);
-                List<String> values = Arrays.asList(value //
+                //
+                List<String> values = Arrays.stream(value //
                         .replace(DEFAULT_LIST_STARTING_CHARACTER, "") //
                         .replace(DEFAULT_LIST_ENDING_CHARACTER, "")//
                         .split(DEFAULT_LIST_DELIMITER))//
-                        .stream()//
                         .map(v -> v.trim())//
                         .filter(v -> !v.isEmpty())//
-                        .collect(Collectors.toList());
+                        .toList();
                 return new ParseLineResult(pid, property.trim(), values);
             } else {
                 return new ParseLineResult(pid, property.trim(), value);
@@ -539,7 +538,7 @@ public class ConfigDispatcher {
          */
         public List<String> getOrphanPIDs() {
             return processedPIDMapping.entrySet().stream().filter(e -> e.getValue() == null).map(e -> e.getKey())
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         /**
@@ -547,7 +546,7 @@ public class ConfigDispatcher {
          */
         public void setCurrentExclusivePIDList() {
             exclusivePIDs = processedPIDMapping.entrySet().stream().filter(e -> e.getValue() != null)
-                    .map(e -> e.getKey()).collect(Collectors.toList());
+                    .map(e -> e.getKey()).toList();
         }
 
         public boolean contains(String pid) {
